Made initial ui layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Rock, Paper, Scissors, Lizard, Spock</title>
-    </head>
-    <body>
-        <script src="script.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
+    <link href="style.css" rel="stylesheet">
+</head>
+<body class = "horizontal-split">
+    <div id = "monitor">
+        <div id = "screen-border">
+            <div id = "screen"></div> 
+        </div>
+        <div id = "monitor-buttons">
+            <div id = "buttons-container">
+                <div id = "button1"></div>
+                <div id = "button2"></div>
+                <div id = "button3"></div>
+                <div id = "button4"></div>
+
+            </div>
+            <div id = "power-button-container">
+                <div id = "power-button"></div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
