Committed modified files that i forgot

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body class = "horizontal-split">
     <div id = "monitor">
         <div id = "screen-border">
-            <div id = "screen"></div> 
+            <div id = "screen">
+                <div id = "dashed-box">
+                    <h3 id = "title">RPSLS</h3>
+                </div>
+                <button id = "start-button">START</button>
+            </div> 
         </div>
         <div id = "monitor-buttons">
             <div id = "buttons-container">
@@ -23,6 +28,11 @@
                 <div id = "power-button"></div>
             </div>
         </div>
+        <img src = "images/cloud1.png" alt = "cloud 1" class = "cloud" id = "cloud1">
+        <img src = "images/cloud2.png" alt = "cloud 2" class = "cloud" id = "cloud2">
+        <img src = "images/cloud3.png" alt = "cloud 3" class = "cloud" id = "cloud3">
+        <img src = "images/cloud4.png" alt = "cloud 4" class = "cloud" id = "cloud4">
+
     </div>
 </body>
 </html>
