Hid main menu elements

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div id = "monitor">
         <div id = "screen-border">
             <div id = "screen">
-                <div id = "dashed-box">
-                    <h3 id = "title">RPSLS</h3>
+                <div id = "dashed-box" class = "hide-main-menu">
+                    <h3 id = "title" class = "hide-main-menu">RPSLS</h3>
                 </div>
-                <button id = "start-button">START</button>
+                <button id = "start-button" class = "hide-main-menu">START</button>
             </div> 
         </div>
         <div id = "monitor-buttons">
@@ -28,11 +28,12 @@
                 <div id = "power-button"></div>
             </div>
         </div>
-        <img src = "images/cloud1.png" alt = "cloud 1" class = "cloud" id = "cloud1">
-        <img src = "images/cloud2.png" alt = "cloud 2" class = "cloud" id = "cloud2">
-        <img src = "images/cloud3.png" alt = "cloud 3" class = "cloud" id = "cloud3">
-        <img src = "images/cloud4.png" alt = "cloud 4" class = "cloud" id = "cloud4">
+        <img src = "images/cloud1.png" alt = "cloud 1" class = "cloud hide-main-menu" id = "cloud1">
+        <img src = "images/cloud2.png" alt = "cloud 2" class = "cloud hide-main-menu" id = "cloud2">
+        <img src = "images/cloud3.png" alt = "cloud 3" class = "cloud hide-main-menu" id = "cloud3">
+        <img src = "images/cloud4.png" alt = "cloud 4" class = "cloud hide-main-menu" id = "cloud4">
 
     </div>
 </body>
+<script src = "script.js"></script>
 </html>
