--- a/index.html
+++ b/index.html
@@ -8,32 +8,34 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body class = "horizontal-split">
-    <div id = "monitor">
-        <div id = "screen-border">
-            <div id = "screen">
-                <div id = "dashed-box" class = "hide-main-menu">
-                    <h3 id = "title" class = "hide-main-menu">RPSLS</h3>
+    <div id="viewport-wrapper">
+        <div id = "monitor">
+            <div id = "screen-border">
+                <div id = "screen">
+                    <div id = "dashed-box" class = "hide-main-menu">
+                        <h3 id = "title" class = "hide-main-menu">RPSLS</h3>
+                    </div>
+                    <button id = "start-button" class = "hide-main-menu">START</button>
+                </div> 
+            </div>
+            <div id = "monitor-buttons">
+                <div id = "buttons-container">
+                    <div id = "button1"></div>
+                    <div id = "button2"></div>
+                    <div id = "button3"></div>
+                    <div id = "button4"></div>
+
                 </div>
-                <button id = "start-button" class = "hide-main-menu">START</button>
-            </div> 
-        </div>
-        <div id = "monitor-buttons">
-            <div id = "buttons-container">
-                <div id = "button1"></div>
-                <div id = "button2"></div>
-                <div id = "button3"></div>
-                <div id = "button4"></div>
-
+                <div id = "power-button-container">
+                    <div id = "power-button"></div>
+                </div>
             </div>
-            <div id = "power-button-container">
-                <div id = "power-button"></div>
-            </div>
-        </div>
-        <img src = "images/cloud1.png" alt = "cloud 1" class = "cloud hide-main-menu" id = "cloud1">
-        <img src = "images/cloud2.png" alt = "cloud 2" class = "cloud hide-main-menu" id = "cloud2">
-        <img src = "images/cloud3.png" alt = "cloud 3" class = "cloud hide-main-menu" id = "cloud3">
-        <img src = "images/cloud4.png" alt = "cloud 4" class = "cloud hide-main-menu" id = "cloud4">
+            <img src = "images/cloud1.png" alt = "cloud 1" class = "cloud hide-main-menu" id = "cloud1">
+            <img src = "images/cloud2.png" alt = "cloud 2" class = "cloud hide-main-menu" id = "cloud2">
+            <img src = "images/cloud3.png" alt = "cloud 3" class = "cloud hide-main-menu" id = "cloud3">
+            <img src = "images/cloud4.png" alt = "cloud 4" class = "cloud hide-main-menu" id = "cloud4">
 
+        </div>
     </div>
 </body>
 <script src = "script.js"></script>
